# android-compositor

./: .gitignore  Cargo.toml  LICENSE  README.md  dev-wlv-build  flaura.toml  kawaii  kwdev  simple-and-kawaii  smithay  waylovely-build
src/: file_chooser.rs  glob_to_mime.rs  handle_token.rs  helpers.rs  lib.rs  open_uri.rs  screen_shot.rs
src/bindings/: activity.rs  intent.rs  mod.rs  uri.rs
waylovely-comp/: Cargo.toml  build.kawaii
xdg-desktop-portal-android/: COPYING  Cargo.toml  README.md
xdg-desktop-portal-android/.reuse/: dep5
xdg-desktop-portal-android/src/: fd.rs  file_chooser.rs  glob_to_mime.rs  handle_token.rs  helpers.rs  lib.rs  open_uri.rs  screen_cast.rs  screen_shot.rs
xdg-desktop-portal-android/src/bindings/: activity.rs  intent.rs  mod.rs  uri.rs
