[workspace]
members = ["xdg-desktop-portal-android", "waylovely-comp" ]

[patch."https://github.com/waylovely-project/smithay"]
smithay = { path = "../smithay"}

[patch.crates-io]
wayland-sys = { git = "https://github.com/Smithay/wayland-rs/", rev = "v0.30.0-beta.9"}
wayland-backend = { git = "https://github.com/Smithay/wayland-rs/", rev = "v0.30.0-beta.9"}
wayland-egl = { git = "https://github.com/Smithay/wayland-rs/", rev = "v0.30.0-beta.9"}
wayland-protocols = { git = "https://github.com/Smithay/wayland-rs/", rev = "v0.30.0-beta.9"}
wayland-protocols-wlr = { git = "https://github.com/Smithay/wayland-rs/", rev = "v0.30.0-beta.9"}
wayland-protocols-misc = { git = "https://github.com/Smithay/wayland-rs/", rev = "v0.30.0-beta.9"}
wayland-server = { git = "https://github.com/Smithay/wayland-rs/", rev = "v0.30.0-beta.9"}
wayland-scanner = { git = "https://github.com/Smithay/wayland-rs/", rev = "v0.30.0-beta.9"}
