[package]
name = "waylovely"
version = "0.1.0"
edition = "2021"

[dependencies]
slog = { version = "2.1.1" }
slog-stdlog = "4.1.0"
bitflags = "1"

[dependencies.smithay]
git = "https://github.com/waylovely-project/smithay"
branch = "for-upstream"

default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]


[package.metadata.android]
# Specifies the package property of the manifest.
package = "com.github.lovelyyfiaaa.Waylovely"
assets = "../assets"
# Specifies the array of targets to build for.
build_targets = [ "aarch64-linux-android" ] # For now we'll just build for Aarch64 <3

# Name for final APK file.
# Defaults to package name.
apk_name = "waylovely"
runtime_libs = "../prebuilt-libs"


# Anvil needs this to create socket files for Wayland
[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

# See https://developer.android.com/guide/topics/manifest/uses-sdk-element

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 32

[package.metadata.android.application]
label = "Waylovely"