# SPDX-FileCopyrightText: 2022 Nefo Fortressia <nefothingy@hotmail.com>
#
# SPDX-License-Identifier: LGPL-2.1-or-later

[package]
name = "xdg-desktop-portal-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "2.3.2"
jni = { version = "0.19.0", features = ["invocation"] }
serde = "1.0.137"
rand = "0.8.5"
once_cell = "1.12.0"
serde_repr = "0.1.8"
regex = "1.5.6"
lazy_static = "1.4.0"
itertools = "0.10.3"